# Phoenix

./: .gitignore  CHANGELOG.md  LICENSE  README.md
.cargo/: config.toml
.github/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml
.github/workflows/: build.yml  macos-build.yml  windows-build.yml
docs/en/: Build.md
phoenix-bootloader/: Cargo.toml
phoenix-bootloader/src/: main.rs
phoenix-bootloader/src/arch/aarch64/: mod.rs
phoenix-bootloader/src/arch/x86_64/: gop.rs  mod.rs  stdout.rs
phoenix-builder/: Cargo.toml
phoenix-builder/src/: boot.rs  bundled.rs  kernel.rs  main.rs  qemu.rs  tools.rs
phoenix-builder/src/pack/: aarch64_pack.rs  mod.rs  x86_limine_pack.rs  x86_pack.rs
phoenix-kernel/: Cargo.toml
phoenix-kernel/.cargo/: config.toml  limine.cfg  x86_64-phoenix.json  x86kernel.ld
phoenix-kernel/src/: main.rs
tools/: gitpod.sh  termux.sh
