[package]
name = "phoenix-bootloader"
version = "0.1.0"
edition = "2021"
authors = ["JakubGawron1"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = {version ="0.14.0", features = ["exts", "logger", "alloc"]}
uefi-services = "0.11.0"
rand_core = "0.6.3"
log = { version = "0.4.14", default-features = false}
embedded-graphics = "0.7.1"
spin = "0.9.2"
noto-sans-mono-bitmap = "0.1.5"

[target.'x86_64-unknown-uefi'.dependencies]
tinybmp = "0.3.1"
x86_64 = "0.14.8"

[target.'aarch64-unknown-uefi'.dependencies]
cortex-a = "7.0.1"
tock-registers = "0.7.0"
fdt = "0.1.3"