[package]
name = "phoenix-builder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.25"
tokio = {version = "1.15.0", features = ["macros", "rt", "rt-multi-thread"]}
reqwest = {version = "0.11.8", features = ["rustls-tls"], default-features = false}
fs_extra = "1.2.0"
fatfs = "0.3.5"
gpt = "3.0.0"
xshell = "0.1.17"
spin = "0.9.2"
serde = { version = "1.0.133", default-features = false }
postcard = { version = "0.7.2", features = ["alloc"] }
yaml-rust = "0.4.5"
ansi_term = "0.12.1"